--- a/.eslintrc
+++ b/.eslintrc
@@ -22,8 +22,9 @@
       "react/no-array-index-key": [0],
       "react/no-danger": [0],
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
-      // "array-callback-return": "error"
+      "react-hooks/exhaustive-deps": "warn",
+      "requireReturnForObjectLiteral": false
+    
       
     }
   }
